[A11y] Touch exploration with TalkBack stops working after zooming the page on Android
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
People
(Reporter: BlindMoon38, Assigned: eeejay)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
Steps to reproduce
- Open Firefox for Android with TalkBack enabled.
- Go to https://es.m.wikipedia.org/wiki/Euskera.
- Scroll down the page a little.
- Pinch to zoom the page.
- Try using touch exploration to explore the content of the page.
Expected results
Using Touch exploration, It should be possible to focus elements while the page is zoomed in.
Actual results
It's not possible to focus any elementsusing touch exploration while the page is zoomed in.
Firefox version
- Firefox Nightly from 2024-11-29T00:34:09.497018301.
- 135.0a1 (Build #2016058887), hg-dd2ffa8af894+.
- GV: 135.0a1-20241128215411.
- AS: 135.20241128050339.
Device
- Xiaomi Poco X6 5G with HyperOS 1.0.17.0 based on Android 14.
Additional information
- TalkBack version 15.1.
- Thebug is harder to reproduce if you don't scrollddown the page before zooming in.
Comment 1•3 months ago
|
||
Triaging as s2 for now, since this impacts the ability to explore the screen. In theory, bug 1899658 should have fixed this, but I guess it hasn't in this instance.
Eitan, would you mind looking into this when you get a chance? Thanks.
Updated•3 months ago
|
Updated•3 months ago
|
Updated•3 months ago
|
Comment 2•3 months ago
|
||
The bug has a release status flag that shows some version of Firefox is affected, thus it will be considered confirmed.
Comment 3•3 months ago
|
||
The bug is marked as tracked for firefox134 (beta) and tracked for firefox135 (nightly). However, the bug still isn't assigned.
:fgriffith, could you please find an assignee for this tracked bug? If you disagree with the tracking decision, please talk with the release managers.
For more information, please visit BugBot documentation.
Updated•3 months ago
|
Assignee | ||
Comment 4•3 months ago
|
||
A document's body element can lose its scroll frame if the root element (eg. <html>) is restyled to overflow scroll/auto. In that case we will not get any useful notifications for the body element except for a reframe to a non-scrolling frame.
The place where we see this as a problem is in hit testing because
accessibles get erroneously clipped out because of stale scroll
positions.
Assignee | ||
Comment 5•3 months ago
|
||
Tried really hard to generalize the failing case further, but it looks like this is related to how the root scroll frame works.
Updated•3 months ago
|
Assignee | ||
Comment 6•3 months ago
|
||
The way the code was written it would expect a uniform overflow style
for both x and y. We need to make sure to handle each axis separately.
Comment 8•3 months ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/b1c9cdccd0dd
https://hg.mozilla.org/mozilla-central/rev/a7b9142fd957
Comment 9•3 months ago
|
||
The patch landed in nightly and beta is affected.
:eeejay, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox134
towontfix
.
For more information, please visit BugBot documentation.
Updated•3 months ago
|
Assignee | ||
Updated•2 months ago
|
Description
•